# ClipCraft

./: .gitignore  Cargo.toml  Dockerfile  README.md  api.py  index.html  pytemp  requirements.txt
app/: database.py  main.py  models.py  tasks.py  utils.py
clipcraft-go/: go.mod  go.sum  main.go  models.go  processor.go
py/: clipcraft.py  index.html
py/templates/: index.html
src/: main.rs  models.rs  routes.rs  video_processor.rs
static/: index.html
worker/: celery.py
