# Cargo.toml
[package]
name = "clipcraft"
version = "0.1.0"
edition = "2021"

[dependencies]
# Enable multipart support in Axum
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }

# Stable release of rustube on crates.io
rustube = "0.6"

# FFmpeg bindings
ffmpeg-next = "4.4"

bytes = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
